modified:   index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         </li>
 
         <li>
-          <a href="https://google.com" target="_blank">Baixar meu E-Book</a>
+          <a href="https://github.com/gabrielmoreiraf" target="_blank"
+            >Veja o meu GitHub</a
+          >
         </li>
 
         <li>
@@ -50,7 +52,7 @@
         </li>
       </ul>
       <div id="social-links">
-        <a href="https://github.com/" target="_blank">
+        <a href="https://github.com/gabrielmoreiraf" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
         <a href="https://instagram.com/gabrieldesigner_" target="_blank">
